--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "speed-typing-game",
+  "name": "Speed Typing Game",
   "version": "1.0.0",
-  "description": "",
+  "description": "Speed typing game",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
